Fix tooltips, add whale alerts SCSS, remove TODO banner
Dashboard improvements:
- Removed dev-banner (TODOs completed)
- Fixed double tooltip issue - now uses data-tooltip attribute
  instead of title to avoid native browser tooltip overlap
- Created reusable tooltip partial (layouts/partials/tooltip.html)
- Applied tooltip partial to all 9 dashboard widgets

Alpha Radar:
- Added whale-alerts-list SCSS styles for whale alerts section

--- a/assets/src/scss/dashboard.scss
+++ b/assets/src/scss/dashboard.scss
@@ -174,7 +174,7 @@
 
   // Custom tooltip overlay
   &::after {
-    content: attr(title);
+    content: attr(data-tooltip);
     position: absolute;
     top: calc(100% + 8px);
     left: 50%;
@@ -2111,7 +2111,7 @@
   }
 
   &::after {
-    content: attr(title);
+    content: attr(data-tooltip);
     position: absolute;
     top: calc(100% + 8px);
     left: 50%;
@@ -2833,7 +2833,7 @@
   }
 
   &::after {
-    content: attr(title);
+    content: attr(data-tooltip);
     position: absolute;
     top: calc(100% + 8px);
     right: 0;
